#  Brainfck compiler
#  Copyright (C) 2025  František Slivko <slivko.frantisek@gmail.com>
#
#  This program is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "brainfck"
description = "brainf*ck compiler"
version = "0.1.0"
edition = "2024"
authors = ["František Slivko <slivko.frantisek@gmail.com>"]
license = "GPL-3"


[dependencies]
clap = { version = "4.5.32", features = ["default" ,"cargo", "color"] }